[tool.poetry]
name = "sentrybot"
version = "0.1.0"
description = ""
authors = ["FoxBigotry <152131156+FoxBigotry@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.3.4"
aiogram = "3.7"
fastapi = "^0.111.0"
requests = "^2.32.3"
sentry-sdk = "^2.7.1"
motor = "^3.5.1"
uvicorn = "^0.30.1"
tortoise-orm = "^0.21.5"
aerich = {extras = ["postgres"], version = "^0.7.2"}
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
